<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KanjiKards</string>
    <string name="activity_search">Search Results</string>
	<string name="activity_edit">Edit Card</string>
    
    <string name="menu_browse_deck">Browse Current Deck</string>
    <string name="menu_edit_card">Edit Card</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_jump">Jump to beginning of deck</string>
    
    <string name="Front">一</string>
    <string name="BackGrade">Grade 1</string>
    <string name="Back0">1</string>
    <string name="Back1">イチ, イツ</string>
    <string name="Back2">ひと―, ひと(つ)</string>
    <string name="Back3">one</string>
    
    <string name="edit_title_kanji">一</string>
    <string name="edit_on_hint">On Reading</string>
    <string name="edit_kun_hint">Kun Reading</string>
    <string name="edit_english_hint">English Translation</string>
    
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="empty_search_results"></string>
    <string name="dialog_load_deck_title">Load deck:</string>
    <string name="dialog_move_card_title">Move card to deck:</string>
    <string name="dialog_settings_title">Settings</string>
    <string name="dialog_jump_message">Jump to beginning of deck?</string>
    <string name="dialog_jump_button">Jump</string>
    <string name="dialog_confirmation_message">Overwrite existing data?</string>
    
    <string name="dialog_help_title">How to use KanjiKards</string>
    <string name="dialog_help_message">-Swipe left/right to navigate\n-Tap a card to flip it\n-Swipe up to <b>Move Card</b> to a different deck\n-Swipe down to <b>Load Deck</b>\n-Tap and hold to jump to beginning of deck\n-Use the decks to assist with your learning</string>
    
    <string name="dialog_about_title">About KanjiKards</string>
    <string name="dialog_about_message"><b>Japanese font information:</b>\nLicensed under the Apache License, Version 2.0 (the "License");
                 you may not use this file except in compliance with the License.
                 You may obtain a copy of the License at
                 http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software
                 distributed under the License is distributed on an "AS IS" BASIS,
                 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                 See the License for the specific language governing permissions and
                 limitations under the License.</string>
    <string name="copyright_message">Copyright 2014 Scott Shimeta</string>
    
    <string name="first_launch_key">FIRST_LAUNCH</string>
    <string name="current_deck_key">CURRENT_DECK</string>
    <string name="back_of_card_key">BACK_OF_CARD</string>
    <string name="randomize_key">RANDOMIZE_CARDS</string>
    <string name="animation_key">ANIMATE_CARD_FLIP</string>

</resources>